trunk/OldArchive/5e104a762b6cfb0ff28d86e49705e0c0-80162bcd59d15b475a9bf39ab35abb94/output
+ g++ -std=c++11 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:2:30: error: expected class-name before ‘{’ token
 struct fuckQThread : QThread {
                              ^
main.cpp:4:30: error: ‘DisableIfRelated’ has not been declared
     template <typename FunF, DisableIfRelated<FunF, fuckQthread<Fun>>...>
                              ^
main.cpp:4:46: error: expected ‘>’ before ‘<’ token
     template <typename FunF, DisableIfRelated<FunF, fuckQthread<Fun>>...>
                                              ^
main.cpp:11:1: error: expected ‘;’ after struct definition
 }
 ^
main.cpp: In constructor ‘fuckQThread<Fun>::fuckQThread()’:
main.cpp:3:25: error: expected ‘{’ at end of input
     fuckQThread() : fun{};
                         ^
main.cpp: In constructor ‘fuckQThread<Fun>::fuckQThread(FunF&&)’:
main.cpp:5:35: error: ‘forward’ is not a member of ‘std’
     fuckQThread(FunF&& fun) : fun(std::forward<FunF>(fun)) {}
                                   ^
main.cpp:5:52: error: expected primary-expression before ‘>’ token
     fuckQThread(FunF&& fun) : fun(std::forward<FunF>(fun)) {}
                                                    ^
main.cpp: At global scope:
main.cpp:14:13: error: ‘Decay’ was not declared in this scope
 fuckQThread<Decay<FunF>> make_fuckQThread(FunF&& fun) {
             ^
main.cpp:14:19: error: template argument 1 is invalid
 fuckQThread<Decay<FunF>> make_fuckQThread(FunF&& fun) {
                   ^
main.cpp:14:23: error: expected unqualified-id before ‘>’ token
 fuckQThread<Decay<FunF>> make_fuckQThread(FunF&& fun) {
                       ^
